--- a/sign up.html
+++ b/sign up.html
@@ -98,7 +98,7 @@
 
     <p style="text-align: center;font-size: 30px;">
         <button type="button" onclick="verif()">Sign up</button>
-        <a href="main page.html" target="_self"><button type="button" onclick="reset()">Cancel</button></a>
+        <a href="index.html" target="_self"><button type="button" onclick="reset()">Cancel</button></a>
     </p>
 </body>
 </html>
